2006-06-10 13:43  ntiffin

	* ChangeLog: Update ChangeLog.

2006-06-02 12:29  ntiffin

	* MyOutlineView.h, MyOutlineView.m, SqlDocument.h, SqlDocument.m,
	  TODO.txt, English.lproj/SqlDocument.nib/classes.nib,
	  English.lproj/SqlDocument.nib/info.nib,
	  English.lproj/SqlDocument.nib/keyedobjects.nib: Add database
	  field to connection dialog, add column based sql creation.

2006-06-02 06:52  ntiffin

	* ChangeLog, MyOutlineView.m, SqlDocument.h, SqlDocument.m: Add
	  onSelectDropIndexMenuItem(), onSelectDropFunctionMenuItem(),
	  onSelectCreateFunctionTemplateMenuItem(),
	  onSelectCreateFunctionMenuItem(), and set default selected
	  position in query window.

2006-05-22 20:35  ntiffin

	* ChangeLog, MyOutlineView.m, SqlDocument.h, SqlDocument.m: Correct
	  errors in create table and alter table sql. Add view 1st pass
	  view SQL menu items.

2006-05-14 10:30  ntiffin

	* MyOutlineView.h, MyOutlineView.m, SqlDocument.h, SqlDocument.m:
	  Add table SQL generation commands and stubs for columns, indexes,
	  functions, and views.

2006-05-13 15:20  ntiffin

	* ChangeLog: Update ChangeLog.

2006-05-13 14:28  ntiffin

	* English.lproj/: MainMenu~.nib/classes.nib,
	  MainMenu~.nib/info.nib, MainMenu~.nib/objects.nib,
	  SqlDocument~.nib/classes.nib, SqlDocument~.nib/info.nib,
	  SqlDocument~.nib/keyedobjects.nib: Remove backup files from cvs.

2006-05-13 14:26  ntiffin

	* .DS_Store, ChangeLog, MyOutlineView.h, MyOutlineView.m,
	  SqlDocument.h, SqlDocument.m, English.lproj/.DS_Store,
	  English.lproj/Credits.rtf,
	  English.lproj/SqlDocument.nib/classes.nib,
	  English.lproj/SqlDocument.nib/info.nib,
	  English.lproj/SqlDocument.nib/keyedobjects.nib: Update to sync
	  after sourceforge cvs outage, and add schema browser files.

2006-05-07 12:42  ntiffin

	* ChangeLog, SqlDocument.h, SqlDocument.m,
	  English.lproj/SqlDocument.nib/classes.nib,
	  English.lproj/SqlDocument.nib/info.nib,
	  English.lproj/SqlDocument.nib/keyedobjects.nib: Add schema
	  browser.
